{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "ce5cc7aa-341f-4ae7-a1a3-9c4294871cd9",
            "actions": [
                {
                    "name": "PrimaryTouchInput",
                    "type": "Value",
                    "id": "e6d117b5-1dfa-426c-a720-7f4c8bb7809c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryTouchPress",
                    "type": "Button",
                    "id": "8caf3eaf-93b5-4ef5-b118-26bab251107b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "Value",
                    "id": "3e3f06bf-90f3-48db-905a-b0844982420d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchPress",
                    "type": "Button",
                    "id": "16278d5d-db22-4c1e-993e-58123bda4988",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryTouchPosition",
                    "type": "Value",
                    "id": "d118ecb6-ddc9-48f4-9bc1-3dbe3cde2c88",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "387a237d-7613-49bd-a2d1-f7d859316657",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72dea9ee-d021-4324-ad6c-fcc424d5db18",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5106100c-e618-47c8-8b88-9f6cea2c4fb6",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d139747-cd52-41a3-89b5-d2db77fa27dc",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30123dc8-c49a-4bc6-89e2-d83160d9488e",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}